art,museum: 코드 수정
로고색상 변경, 페이지네이션 추가

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navbar-logo {
+  filter: invert(37%) sepia(84%) saturate(1742%) hue-rotate(-20deg)
+    brightness(102%) contrast(102%);
+}
