--- a/src/pages/List/ListPage.style.css
+++ b/src/pages/List/ListPage.style.css
@@ -55,13 +55,16 @@ p {
     color: #ddd;
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:767px) {
    .section{
     flex-wrap: wrap;
    } 
    .list-container,
    .map-container {
     width: 100%;
+   }
+   .article {
+    flex-wrap: wrap;
    }
 }
 
