--- a/src/pages/List/ListPage.style.css
+++ b/src/pages/List/ListPage.style.css
@@ -58,6 +58,7 @@ p {
 @media screen and (max-width:767px) {
    .section{
     flex-wrap: wrap;
+    padding: 10px;
    } 
    .list-container,
    .map-container {
